logs/mobility/build.make.079.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void targetHandler(const ConstPtr&)’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:909:59: error: ‘struct PickUpResult’ has no member named ‘blockDist’
  pickUpController.setDistanceToBlockUponFirstSight(result.blockDist);
                                                           ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
